@startuml
'https://plantuml.com/class-diagram

src.WindowApp <|-- src.SeleniumParser
src.WindowApp <|-- CSVReader
src.WindowApp <|-- DebtorList
src.WindowApp <|-- IncomingEmails
CSVReader <|-- src.BigCSVCutter
src.SeleniumParser <|-- Status
IncomingEmails <|-- WithKadastrList

class src.BigCSVCutter {
   # Integer countLine
   # Integer countFile
   # String date
   # String dateStr
   # File folder
   # Boolean created
}
class src.SeleniumParser {
    - Integer driver
    - String srcDstFiles
}
class CSVReader{
    # String pathname
    # File csvFile
    # Array words
    # Array  lines
}

class DebtorList {
    - String ownerName
    - String payerName
    - Long accruedMoney
    - Long returnedMoney
    - Date createDateOfPayment
    - Date uploadDateOfPayment
    - Boolean kadastr

}
class src.WindowApp{
    - String kadastrNumber
    - String personalAddress
    - String personalAccount
    - Long personalAccount
    - Integer square
    - Integer emailCounter
    - Integer personalID
    - Date createDate
    - Date uploadDate
}
class IncomingEmails{
     - String emailAddress
     - String emailSender
     - String emailReceiver
}
class WithKadastrList{
    - String source
    - String destination
    - Date createdTime
}

enum Status {
SUCCESS
SENT TO PROCESSING
NO KADASTRS
ERROR
}

@enduml